k8s/deployments/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: kyoto67/highload/api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8765
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8765
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8765
            initialDelaySeconds: 30
            periodSeconds: 10
