k8s/deployments/authorizator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorizator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorizator
  template:
    metadata:
      labels:
        app: authorizator
    spec:
      containers:
        - name: authorizator
          image: kyoto67/highload/authorizator:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
