k8s/deployments/candidates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidates
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: candidates
  template:
    metadata:
      labels:
        app: candidates
    spec:
      containers:
        - name: candidates
          image: kyoto67/highload/interviewing-service/candidates:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
