k8s/deployments/feedbacks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedbacks
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedbacks
  template:
    metadata:
      labels:
        app: feedbacks
    spec:
      containers:
        - name: feedbacks
          image: kyoto67/highload/interviewing-service/feedbacks:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
