k8s/deployments/interviewers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interviewers
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interviewers
  template:
    metadata:
      labels:
        app: interviewers
    spec:
      containers:
        - name: interviewers
          image: kyoto67/highload/interviewing-service/interviewers:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
