k8s/deployments/interviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interviews
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: interviews
  template:
    metadata:
      labels:
        app: interviews
    spec:
      containers:
        - name: interviews
          image: kyoto67/highload/interviewing-service/interviews:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
