k8s/deployments/kafka1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka1
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
