k8s/deployments/kafka3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka3
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka3
  template:
    metadata:
      labels:
        app: kafka3
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
