k8s/deployments/postgres-interview-results.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-results-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interview-results-postgres
  template:
    metadata:
      labels:
        app: interview-results-postgres
    spec:
      containers:
        - name: postgres
          image: kyoto67/highload/interview-results-postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-interview-results-storage
      volumes:
        - name: postgres-interview-results-storage
          persistentVolumeClaim:
            claimName: postgres-interview-results-pvc
