k8s/deployments/postgres-interviewers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-interviewers
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-interviewers
  template:
    metadata:
      labels:
        app: postgres-interviewers
    spec:
      containers:
        - name: postgres
          image: kyoto67/highload/interviewers-postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-interviewers-storage
      volumes:
        - name: postgres-interviewers-storage
          persistentVolumeClaim:
            claimName: postgres-interviewers-pvc
