k8s/deployments/postgres-passport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-passport
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-passport
  template:
    metadata:
      labels:
        app: postgres-passport
    spec:
      containers:
        - name: postgres
          image: kyoto67/highload/passport-postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-passport-storage
      volumes:
        - name: postgres-passport-storage
          persistentVolumeClaim:
            claimName: postgres-passport-pvc
