k8s/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: '/eureka'
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761

          - pathType: Prefix
            path: /kafka
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
          - pathType: Prefix
            path: /gateway
            backend:
              service:
                name: api-gateway
                port:
                  number: 8765
